--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="/assets/css/index.css">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.css">
 
     <script src="assets/jquery-3.5.1/jquery-3.5.1.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.js"></script>
