--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </article>
 
     <!-- SECOND DIV -->
-    <article class="secondDiv d-flex justify-content-center">
+    <article class="secondDiv d-flex justify-content-center mt-5">
         <div class="row text-center no-gutters align-content-center">
             <div class="col">
                 <h3>Code Academy HTML Templates Free Download</h3>
@@ -75,6 +75,7 @@
         </div>
     </article>
 
+    <!-- CARDS 1 -->
     <div class="container mt-5">
         <h3>Hottest headphones of the month</h3>
         <div class="row justify-content-between">
@@ -117,38 +118,97 @@
     <!-- CARDS 2 -->
     <!-- FIRST ROW -->
     <div class="container mt-5">
-        <h3>Meet Our New Headphones</h3>
+        <h3>Meet Our New Headphones &#x1F525;</h3>
         <div class="row justify-content-between">
             <div class="col-12 col-sm-6 col-lg-3 my-1">
-                <img class="card-img-top img-fluid w-100" src="./assets/img/03.jpg" alt="">
+                <img class="card-img-top img-fluid w-100" src="./assets/img/1.1-3.jpg" alt="">
             </div>
             <div class="col-12 col-sm-6 col-lg-3 my-1">
-                <img class="card-img-top img-fluid w-100" src="./assets/img/03.jpg" alt="">
+                <img class="card-img-top img-fluid w-100" src="./assets/img/gallery02.jpg" alt="">
             </div>
             <div class="col-12 col-sm-6 col-lg-3 my-1">
-                <img class="card-img-top img-fluid w-100" src="./assets/img/03.jpg" alt="">
+                <img class="card-img-top img-fluid w-100" src="./assets/img/1.1-3.jpg" alt="">
             </div>
             <div class="col-12 col-sm-6 col-lg-3 my-1">
-                <img class="card-img-top img-fluid w-100" src="./assets/img/03.jpg" alt="">
+                <img class="card-img-top img-fluid w-100" src="./assets/img/4.jpg" alt="">
             </div>
         </div>
         <div class="row justify-content-between">
             <div class="col-12 col-sm-6 col-lg-3 my-1">
-                <img class="card-img-top img-fluid w-100" src="./assets/img/03.jpg" alt="">
+                <img class="card-img-top img-fluid w-100" src="./assets/img/2.1-4.jpg" alt="">
             </div>
             <div class="col-12 col-sm-6 col-lg-3 my-1">
-                <img class="card-img-top img-fluid w-100" src="./assets/img/03.jpg" alt="">
+                <img class="card-img-top img-fluid w-100" src="./assets/img/gallery02.jpg" alt="">
             </div>
             <div class="col-12 col-sm-6 col-lg-3 my-1">
-                <img class="card-img-top img-fluid w-100" src="./assets/img/03.jpg" alt="">
+                <img class="card-img-top img-fluid w-100" src="./assets/img/gallery02.jpg" alt="">
             </div>
             <div class="col-12 col-sm-6 col-lg-3 my-1">
-                <img class="card-img-top img-fluid w-100" src="./assets/img/03.jpg" alt="">
+                <img class="card-img-top img-fluid w-100" src="./assets/img/2.1-4.jpg" alt="">
             </div>
         </div>
     </div>
 
+    <!-- THIRD DIV -->
+    <article class="thirdDiv d-flex justify-content-center mt-5">
+        <div class="row text-center no-gutters align-content-center">
+            <div class="col">
+                <h3>Why do you have to buy headphones only for us?</h3>
+            </div>
+        </div>
+    </article>
 
+    <!-- THE FOUR PARAGRAPHS -->
+    <div class="container mt-5">
+        <div class="row justify-content-between">
+            <div class="col-12 col-sm-6 col-lg-3 my-1">
+                <h3 class="text-center">HIGH QUALITY</h3>
+                <p class="w-100 text-justify">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi dolore quibusdam sit explicabo
+                    aliquam, repudiandae maiores consequuntur nisi. Qui fuga perferendis illo molestias recusandae hic
+                    quo alias inventore eligendi tempore?
+                </p>
+                <a href="" class="text-primary">Learn More...
+                </a>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 my-1">
+                <h3 class="text-center">ORIGINAL DEVICES</h3>
+                <p class="w-100 text-justify">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi dolore quibusdam sit explicabo
+                    aliquam, repudiandae maiores consequuntur nisi. Qui fuga perferendis illo molestias recusandae hic
+                    quo alias inventore eligendi tempore?
+                </p>
+                <a href="" class="text-primary">Learn More...
+                </a>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 my-1">
+                <h3 class="text-center">YEAR WARRANTY</h3>
+                <p class="w-100 text-justify">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi dolore quibusdam sit explicabo
+                    aliquam, repudiandae maiores consequuntur nisi. Qui fuga perferendis illo molestias recusandae hic
+                    quo alias inventore eligendi tempore?
+                </p>
+                <a href="" class="text-primary">Learn More...
+                </a>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 my-1">
+                <h3 class="text-center">WEEK TO CHECK</h3>
+                <p class="w-100 text-justify">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi dolore quibusdam sit explicabo
+                    aliquam, repudiandae maiores consequuntur nisi. Qui fuga perferendis illo molestias recusandae hic
+                    quo alias inventore eligendi tempore?
+                </p>
+                <a href="" class="text-primary">Learn More...
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <!-- THE FOOTER -->
+    <footer class="footer container-fluid bg-secondary text-center d-flex flex-column justify-content-center mt-auto">
+        <p class="text-light mb-0">Code Academy &copy; 2020</p>
+        <p class="text-light mb-0 mt-3">Terms of Use and Privacy Policy</p>
+    </footer>
 </body>
 
 </html>
