--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Headphones Store</title>
     <link rel="stylesheet" href="./assets/css/index.css">
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.css">
 
@@ -50,7 +50,7 @@
         <div class="row text-center no-gutters" style="position: relative; top: 30rem;">
             <div class="col">
                 <h5>THINKING OF BUYING A HEADPHONE</h5>
-                <h1>CODE ACADEMY Templates</h1>
+                <h1>KPR Templates</h1>
                 <button class="btn btn-lg btn-dark p-3 btnShopNow mt-2">Shopping Now</button>
             </div>
         </div>
@@ -70,7 +70,7 @@
     <article class="secondDiv d-flex justify-content-center mt-5">
         <div class="row text-center no-gutters align-content-center">
             <div class="col">
-                <h3>Code Academy HTML Templates Free Download</h3>
+                <h3>KPR HTML Templates Free Download</h3>
             </div>
         </div>
     </article>
@@ -206,7 +206,7 @@
 
     <!-- THE FOOTER -->
     <footer class="footer container-fluid bg-secondary text-center d-flex flex-column justify-content-center mt-auto">
-        <p class="text-light mb-0">Code Academy &copy; 2020</p>
+        <p class="text-light mb-0">KPR &copy; 2020</p>
         <p class="text-light mb-0 mt-3">Terms of Use and Privacy Policy</p>
     </footer>
 </body>
